Update schema of platform and genre
